--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <a href="atv1/index.html">atividade1</a>
+    <a href="atv1/index.html">atividade2</a>
+    <a href="atv1/index.html">atividade3</a>
     
 </body>
 </html>
