--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Programação web 2024.2</h1>
 </head>
 <body>
-    <a href="atv1/index.html">atividade1</a>
+    <a href="atv1/index.html">atividade1</a> - Pagina dashboard<br>
     <a href="atv1/index.html">atividade2</a>
     <a href="atv1/index.html">atividade3</a>
     
