--- a/atv4/index.html
+++ b/atv4/index.html
@@ -27,8 +27,8 @@
 
         
         <div class="row linha">
-            <div class="col-md-6 coluna">Coluna 1 (col-md-6)</div>
-            <div class="col-md-6 coluna">Coluna 2 (col-md-6)</div>
+            <div class="col-md-6 coluna">https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.petz.com.br%2Fblog%2Fbem-estar%2Fvida-de-gato%2F&psig=AOvVaw0TiUEwVD6E55qfyoK1VgyM&ust=1730817800151000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPi0ruP1wokDFQAAAAAdAAAAABAE</div>
+            <div class="col-md-6 coluna">https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.petlove.com.br%2Fdicas%2Fbeneficios-de-ter-um-gato&psig=AOvVaw0TiUEwVD6E55qfyoK1VgyM&ust=1730817800151000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPi0ruP1wokDFQAAAAAdAAAAABAJ</div>
         </div>
 
         
