--- a/atv5/index.html
+++ b/atv5/index.html
@@ -5,7 +5,7 @@
     <title>Atividade 05 - JavaScript</title>
     <script>
         function mostrarAlerta() {
-            alert("Bem-vindo à Atividade 05 de JavaScript!");
+            alert("Atividade 05 de JavaScript");
         }
 
         function mostrarAlertaComMensagem(mensagem) {
@@ -27,9 +27,9 @@
     
     <button onclick="mostrarAlerta()">Mostrar Alerta</button>
 
-    <button onclick="mostrarAlertaComMensagem('Olá, essa é uma mensagem personalizada!')">Mostrar Alerta com Mensagem</button>
+    <button onclick="mostrarMensagem('Hello')">Mostrar Alerta com Mensagem</button>
 
-    <button onclick="somarNumeros(5, 10)">Somar 5 + 10</button>
+    <button onclick="somarNumeros(10, 10)">Somar 10 + 10</button>
 
     <div id="mensagem" style="margin-top: 20px; font-size: 18px; color: blue;"></div>
     
