--- a/atv5/index.html
+++ b/atv5/index.html
@@ -27,7 +27,7 @@
     
     <button onclick="mostrarAlerta()">Mostrar Alerta</button>
 
-    <button onclick="mostrarMensagem('Hello')">Mostrar Alerta com Mensagem</button>
+    <button onclick="mostrarMensagem('Hello')">Mostrar Mensagem</button>
 
     <button onclick="somarNumeros(10, 10)">Somar 10 + 10</button>
 
