--- a/atv5/index.html
+++ b/atv5/index.html
@@ -5,7 +5,7 @@
     <title>Atividade 05 - JavaScript</title>
     <script>
         function mostrarAlerta() {
-            alert("Atividade 05 de JavaScript");
+            alert("Atividade 05");
         }
 
         function mostrarAlertaComMensagem(mensagem) {
@@ -18,7 +18,7 @@
         }
 
         function escreveTexto() {
-            document.getElementById("mensagem").innerHTML = "Texto escrito pela função JavaScript!";
+            document.getElementById("mensagem").innerHTML = "Rayquaza";
         }
     </script>
 </head>
