--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="atv4/index.html">atividade4</a>
     <a href="atv15/index.html">atividade15</a>
      <a href="atv5/index.html">atividade5</a>
+    <a href="atv6/index.html">atividade6</a>
     
 </body>
 </html>
