--- a/atv6/index.html
+++ b/atv6/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <title>atividade 06- exercicios javascript 02</title>
+    <title>Atividade 06 - Exercícios JavaScript 02</title>
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1> atividades Javascript 02</h1>
+    <h1>Atividades JavaScript 02</h1>
     <div id="conteudo"></div>
 </body>
 </html>
