--- a/atv6/index.html
+++ b/atv6/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <title>Atividade 06 - Exercícios JavaScript 02</title>
-    <script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atividade 06 - Exercícios JavaScript</title>
 </head>
 <body>
     <h1>Atividades JavaScript 02</h1>
     <div id="conteudo"></div>
+
+    <script>
+        // Todo o código JavaScript aqui
+    </script>
 </body>
 </html>
