--- a/atv8/index.html
+++ b/atv8/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Manipulação de Arrays</title>
-        <script>
-            const frutas = ["maça","banana",,"Laranja","manga","uva"];
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Manipulação de Arrays</title>
+    <script>
+        // Declaração do array
+        const frutas = ["Maçã", "Banana", "Laranja", "Manga", "Uva"];
 
-            function mostrarElementos() {
-                const div = document.getElementsById("resultado");
-                div.innerHTML = frutas.join(",");
-            }
+        // Função para exibir todos os elementos do array
+        function mostrarElementos() {
+            const div = document.getElementById("resultado");
+            div.innerHTML = frutas.join(", ");
+        }
 
-            function mostrarElementosPorPosição() {
-                const posiçao = parseInt(document.getElementsById("posição").value);
-                const div = document.getElementById("resultado");
-                if (posição >= 0 && posicao < frutas.length) {
-                    div.innerHTML = 'Elemento na posição ${posicao}: ${frutas[posicao]}';
-                } else {
-                    div.innerHTML = "Posição inválida!";
-                }
+        // Função para exibir um elemento específico do array
+        function mostrarElementoPorPosicao() {
+            const posicao = parseInt(document.getElementById("posicao").value);
+            const div = document.getElementById("resultado");
+            if (posicao >= 0 && posicao < frutas.length) {
+                div.innerHTML = `Elemento na posição ${posicao}: ${frutas[posicao]}`;
+            } else {
+                div.innerHTML = "Posição inválida!";
             }
-        </script>
-    </head>
-    <body>
-        <h1>Manipulação de Arrays</h1>
-        <button onclick="mostrarElementos()">Mostrar todos os elementos</button>
-        <br><br>
-        <div id="resultado" style="border: 1px solid #000; padding: 10px; width: 300px; min-height: 50px;"></div>
-    </body>
+        }
+    </script>
+</head>
+<body>
+    <h1>Manipulação de Arrays</h1>
+    <button onclick="mostrarElementos()">Mostrar todos os elementos</button>
+    <br><br>
+    <input type="number" id="posicao" placeholder="Digite a posição">
+    <button onclick="mostrarElementoPorPosicao()">Mostrar elemento por posição</button>
+    <br><br>
+    <div id="resultado" style="border: 1px solid #000; padding: 10px; width: 300px; min-height: 50px;"></div>
+</body>
 </html>
