--- a/atv9/index.html
+++ b/atv9/index.html
@@ -45,7 +45,7 @@
       if (pilhaPessoas.length > 0) {
         const removido = pilhaPessoas.pop();
         atualizarLista();
-        alert(A pessoa removida foi: ${removido});
+        alert('A pessoa removida foi: ${removido}');
       } else {
         alert("A pilha está vazia. Nenhuma pessoa para remover.");
       }
