--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <a href="atv6/index.html">atividade6</a>
     <a href="atv8/index.html">atividade8</a>
     <a href="atv9/index.html">atividade9</a>
-    <a href="projetopython">python1</a>
+    <a href="projetopython/teste01.py">python1</a>
 </body>
 </html>
